# ProjectHandler

./: .gitignore  AGENTS.md  ProjectHandler.bat  ProjectHandler.sh  README.md  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh
docs/: fluxograma-analise-pdf.md
scripts/: import_entities_from_excel.py
src/projecthandler/: __init__.py  app.py  entity_repository.py  models.py  parser.py  text_utils.py
src/projecthandler/data/: __init__.py  entity_definitions.json
tests/: test_project_parser.py
