[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projecthandler"
version = "0.1.0"
description = "Gerenciador de projetos de rede de distribuicao com extracao inicial de entidades de PDFs CEMIG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "pypdf>=6.0",
]

[project.scripts]
projecthandler = "projecthandler.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
projecthandler = ["data/*.json"]
